# KG_RAG_B

./: .gitignore  DATA.xlsx  Data.xlsx  Google_sheet.py  KG_Build_B.py  KG_Embedding.py  KG_Embedding_B.py  KG_Faiss_Query.py  KG_Faiss_Query_3068.py  KG_Faiss_Query_50.py  KG_Generate.py  KG_Google_sheet.py  Neo4j_Query.py  data.xlsx  data1.xlsx  data_3068.xlsx  define_case_type.py  get_closest_case.py  input_filter.py  pyproject.toml  query_test.py
case_index_3068/: 原被告皆數名+§187未成年案型_index.faiss  原被告皆數名+§187未成年案型_metadata.npy  原被告皆數名+§188僱用人案型_index.faiss  原被告皆數名+§188僱用人案型_metadata.npy  原被告皆數名_index.faiss  原被告皆數名_metadata.npy  單純原被告各一+§187未成年案型_index.faiss  單純原被告各一+§187未成年案型_metadata.npy  單純原被告各一+§188僱用人案型_index.faiss  單純原被告各一+§188僱用人案型_metadata.npy  單純原被告各一+§190動物案型_index.faiss  單純原被告各一+§190動物案型_metadata.npy  單純原被告各一_metadata.npy  數名原告+§187未成年案型_index.faiss  數名原告+§187未成年案型_metadata.npy  數名原告+§188僱用人案型_index.faiss  數名原告+§188僱用人案型_metadata.npy  數名原告+§190動物案型_index.faiss  數名原告+§190動物案型_metadata.npy  數名原告_index.faiss  數名原告_metadata.npy  數名被告+§187未成年案型_index.faiss  數名被告+§187未成年案型_metadata.npy  數名被告+§188僱用人案型_index.faiss  數名被告+§188僱用人案型_metadata.npy  數名被告+§190動物案型_index.faiss  數名被告+§190動物案型_metadata.npy  數名被告_index.faiss  數名被告_metadata.npy
case_index_50/: 原被告皆數名+§188僱用人案型_index.faiss  原被告皆數名+§188僱用人案型_metadata.npy  原被告皆數名_index.faiss  原被告皆數名_metadata.npy  單純原被告各一+§187未成年案型_index.faiss  單純原被告各一+§187未成年案型_metadata.npy  單純原被告各一+§190動物案型_index.faiss  單純原被告各一+§190動物案型_metadata.npy  單純原被告各一_index.faiss  單純原被告各一_metadata.npy  數名原告_index.faiss  數名原告_metadata.npy  數名被告_index.faiss  (+7 more)
